--- a/_config.yml
+++ b/_config.yml
@@ -262,7 +262,7 @@ jekyll-archives:
     category: '/blog/category/:name/'
 
 display_tags: ['images', 'links', 'math', 'code'] # these tags will be displayed on the front page of your blog
-display_categories: ['studynote'] # these categories will be displayed on the front page of your blog
+display_categories: ['studynote','tutorials'] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
