--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,20 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Yuhang Song | BLOG # the website title (if blank, full name will be used instead)
+title: Yuhang Song - BLOG | 宋宇航的博客 # the website title (if blank, full name will be used instead)
 first_name: Yuhang
 middle_name:
 last_name: Song
 email: yuhang@topsoftint.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Yuhang Song Personal BLOG, Ph.D. student in University of LIverpool and National Tsing Hua University, Founder of TOPSOFT INT. 
+  宋宇航个人博客， 英国利物浦大学 & 国立清华大学博士生在读， TOPSOFT INT 创始人。
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+  Powered by <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+keywords: Yuhang Song, university of liverpool, national tsing hua university, 宋宇航, 英国利物浦大学, 国立清华大学, topsoft, topsoftint, topsoft 极致网络  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: YH  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://HuskyKingdom.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
