--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Yuhang Song - BLOG | 宋宇航的博客 # the website title (if blank, full name will be used instead)
+title: Yuhang Song - BLOG | 宋宇航 # the website title (if blank, full name will be used instead)
 first_name: Yuhang
 middle_name:
 last_name: Song
