--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,7 +11,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: Ph.D.
+    - title: Ph.D. Student
       institution: University of Liverpool & NTHU
       year: 10/2022 - Now
       description:
