--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -25,6 +25,14 @@
         - Liverpool, UK
         - 1st Class in Computer Science, majoring AI.
 
+    - title: International A-Level
+      institution:  The National Mathematics and Science College
+      year: 09/2017 - 06/2019 
+      description:
+        - Coventry, UK
+        - Math, Further Math, Physics
+
+
 
 - title: Experience
   type: time_table
@@ -52,23 +60,35 @@
 
 
 
-- title: Teaching
+- title: Research & Teaching
   type: time_table
   contents:
+
+
+    - title: Researcher
+      year: 2023
+      description:  airvLab, University of Liverpool | ELSA Lab, NTHU
+
     - title: Module Demonstrator
       year: 2023
       description: COMP 341 - Robot Perception and Manipulation, University of LIverpool, UK
 
+
+
     - title: Assistant Lecturer
-      year: 2023
+      year: 2015
       description: Foundamental of Computer Science, Guoxin Lanqiao Education Technology (Beijing) Co., Ltd, China
 
 
 - title: Conferences & Societies
   type: time_table
   contents:
+    - year: 2023
+      items: 
+        - International Conference on Learning Representations (ICLR) | External Reviewer
+        - Asian Conference on Machine Learning (ACML) | Paper Author & Conference Speaker
     - year: 2015
       items: 
-        - FIT FREEBUFF Internet Security Conference (Shanghai)
+        - FIT FREEBUFF Internet Security Conference (Shanghai) | Invited Participant
 
 
