--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -20,14 +20,14 @@
 
     - title: Bachelor of Science
       institution:  University of Liverpool
-      year: 09/2019 - 07/2022 
+      year: 09/2019-07/2022 
       description:
         - Liverpool, UK
         - 1st Class in Computer Science, majoring AI.
 
     - title: International A-Level
       institution:  The National Mathematics and Science College
-      year: 09/2017 - 06/2019 
+      year: 09/2017-06/2019 
       description:
         - Coventry, UK
         - Math, Further Math, Physics
@@ -47,14 +47,14 @@
 
     - title: Chief Technology Officer (CTO)
       institution:  Yuemian Co., ltd
-      year: 07/2022 - 04/2023
+      year: 07/2022-04/2023
       description:
         - China
   
   
     - title: Technical Consultant
       institution: Sichuan Xulai co., ltd
-      year: 09/2020 - 09/2021
+      year: 09/2020-09/2021
       description:
         - China
 
